# dashboard-rs

./: Cargo.toml  Rocket.toml
libs/docker/: Cargo.toml
libs/docker/src/: lib.rs
libs/http/src/: lib.rs
libs/system/: Cargo.toml
libs/system/src/: lib.rs
src/: main.rs
src/docker/: mod.rs
src/http/: mod.rs
src/routes/docker/: mod.rs
