[package]
name = "dashboard-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ['json', 'secrets', 'tls']}
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
sysinfo = "0.24.7"
log = "0.4.17"